🐛 [CLI, HTTP] do not process locked movies/TV shows
#3254